# ai-ml-tutorials

./: .gitignore  README.md
AI/: README.md
Backend/: README.md
Bioinformatics/: README.md
Blockchain_Web3/: README.md
CS/: README.md
Career_InterviewPrep/: README.md
CompetitiveProgramming/: README.md
Compilers/: README.md
ComputerArchitecture/: README.md
Cybersecurity/: README.md
DBMS/: README.md
DL/: README.md
DataScience/: EDA_Coefficients.md  README.md
DesignPatterns/: README.md
ElectronicsCommunication_Embedded/: README.md
Frontend/: README.md
GameDev/: README.md
HPC/: README.md
ML/: README.md
Math/: README.md
Mobile/: README.md
NLP/: README.md
NetworkSecurity/: README.md
OpenSource_Contribution/: README.md
OperatingSystems/: README.md
Ops/: README.md
ProductEngineeringManagement/: README.md
ProgrammingLanguages/: README.md
QuantFinance/: README.md
QuantumProgramming/: README.md
RL/: README.md
Research/: README.md
Robotics/: README.md
SystemDesign/: README.md
TechWriting_DevRel/: README.md
Testing/: README.md
XR_ARVR/: README.md
_REFERENCE/: Activations_5Ws.md  Beginners_Project_Guide.md  CaseStudy_IdenticalBottles_MultiCamera.md  Confusion_Matrix.md  LLM_Evals.md  (+20 more)
goku/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
goku/examples/: jwt_auth_shortlist.json  jwt_auth_with_key_rotation.md  realtime_video_inference_pipeline.md
goku/goku/: __init__.py  __main__.py  agent.py  cli.py  knowledge.py  models.py  planner.py  prompts.py  writer.py
goku/tests/: test_planner.py
(+54 files in other folders)
