[project]
name = "goku"
version = "0.1.0"
description = "Claude coding agent that plans functionality using the Tutorials repo as knowledge base"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.scripts]
goku = "goku.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["goku*"]
